--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -1,9 +1,7 @@
 ---
-console.log("This runs in your terminal, not the browser!");
+import HomeLayout from "layouts/HomeLayout.astro";
 ---
 
-<html lang="en">
-  <body>
-    <h1>Hello, World!</h1>
-  </body>
-</html>
+<HomeLayout>
+  <h1>Hello world</h1>
+</HomeLayout>
